# zbus_polkit

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  policykit1.rs
zbus_polkit/: Cargo.toml
zbus_polkit/src/: identify.rs  lib.rs  policykit1.rs
zbus_polkit_agent/: Cargo.toml
zbus_polkit_agent/examples/: agent_session.rs  min_example.rs
zbus_polkit_agent/src/: agent_session.rs  error.rs  interface.rs  lib.rs  unixsession.rs
