[package]
name = "zbus_polkit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

description = "PolicyKit binding"
repository.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["zbus/async-io", "blocking-api"]
tokio = ["zbus/tokio"]
blocking-api = ["zbus/blocking-api"]

[dependencies]
zbus.workspace = true
serde.workspace = true
serde_repr = "0.1.19"
enumflags2.workspace = true
static_assertions = "1.1.0"
nix.workspace = true

[dev-dependencies]
byteorder.workspace = true
tokio.workspace = true
