[package]
name = "zbus_polkit_agent"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
description = "polkit-agent binding for zbus"
authors.workspace = true
repository.workspace = true

[dependencies]
nix.workspace = true

serde.workspace = true
systemd.workspace = true
thiserror.workspace = true
zbus.workspace = true
zbus_polkit.workspace = true

[dev-dependencies]
rpassword.workspace = true
tokio.workspace = true
